# otsdaq_mu2e_tracker

./: .gitignore  CMakeLists.txt
config/ejc/: mu2edaq22.C
config/mu2edaq09_pcie1/: mu2edaq09.C
config/mu2edaq22_pcie0/: mu2edaq22.C
config/mu2edaq22_pcie1/: mu2edaq22.C
config/pasha/: mu2edaq09_pcie0.C  mu2edaq09_pcie1.C  mu2edaq22_pcie0.C  mu2edaq22_pcie1.C
config/test/: mu2edaq04.C  mu2edaq07.C  mu2edaq09.C  mu2edaq22.C
config/test_ts1/: mu2edaq09.C
doc/: channel_mask.xlsx  control_roc.org  dtc_gui.org  otsdaq_mu2e_tracker.org  roc_id_1b561.org  roc_id_805d6.org  root_interface.org  tracker_roc_registers.org
fcl/: TrackerVST_test_001.fcl  driver_tracker_br.fcl  test_dqm_client01.fcl  test_dqm_client01_input_file.fcl  test_trackerDQM.fcl  test_trackerDQM_001.fcl  tracker_dqm_file_print.fcl  transfer_plugin_source.fcl
otsdaq-mu2e-tracker/: CMakeLists.txt
otsdaq-mu2e-tracker/ArtModules/: CMakeLists.txt  TrackerDQM_module.cc  TrackerDQM_module.hh
otsdaq-mu2e-tracker/FEInterfaces/: ROCTrackerInterface.h  ROCTrackerInterface_interface.cc
otsdaq-mu2e-tracker/Generators/: CMakeLists.txt  ToySim.hh  ToySim_generator.cc  TrackerBR_generator.cc  TrackerVST001_generator.cc  TrackerVST_generator.cc
otsdaq-mu2e-tracker/Generators/ToyHW/: CMakeLists.txt  ToyHW.cc  ToyHW.hh
otsdaq-mu2e-tracker/Gui/: CMakeLists.txt  DtcGui.hh  DtcGui_commands.cc  DtcGui_gui.cc  DtcGui_gui_CfoTab.cc  DtcGui_gui_DtcTab.cc  DtcGui_gui_RocTab.cc  DtcGui_threads.cc  classes.h  classes_def.xml
otsdaq-mu2e-tracker/Gui/root/: CMakeLists.txt  classes.h
otsdaq-mu2e-tracker/HelloWorld/: CMakeLists.txt  HelloWorld.cc  HelloWorld.hh  version.cc  version.h
otsdaq-mu2e-tracker/ParseAlignment/: Alignment.cc  Alignment.hh  AlignmentChannel.cc  AlignmentChannel.hh  AlignmentIteration.cc  AlignmentIteration.hh  CMakeLists.txt  PrintLegacyTable.cc  PrintLegacyTable.hh  Types.hh
otsdaq-mu2e-tracker/Ui/: CMakeLists.txt  CfoInterface.cc  CfoInterface.hh  ControlRoc_Read_Par_t.hh  DtcInterface.cc  DtcInterface.hh  DtcInterface_ControlRoc.cc  DtcInterface_print.cc  TrkSpiData.hh  classes.h
otsdaq-mu2e-tracker/Ui/root/: CMakeLists.txt  classes.h  classes_def.xml
otsdaq-mu2e-tracker/gui/: CMakeLists.txt  DtcGui.cc  DtcGui.hh  DtcGui_commands.cc  DtcGui_gui.cc  DtcGui_gui_CfoTab.cc  DtcGui_gui_DtcTab.cc  DtcGui_gui_RocTab.cc
otsdaq-mu2e-tracker/gui/root/: CMakeLists.txt
otsdaq-mu2e-tracker/ui/: CMakeLists.txt  CfoInterface.cc  CfoInterface.hh  DtcInterface.cc  DtcInterface.hh
otsdaq-mu2e-tracker/ui/root/: CMakeLists.txt
scripts/: CfoInterface.cc  CfoInterface.hh  DtcInterface.cc  DtcInterface.hh  cfo.C  cfo_init.C  cfo_print_register.C  cfo_print_status.C  cfo_read_register.C  cfo_status.sh  cfo_write_register.C  chantsDataTestVst.sh  configure_ja.C  control_roc_read.C  copy_data_to_exp.sh  copy_run_to_srv.sh  daq_scripts.C  digi_clear.sh  dtc.py  dtc_clear.sh  dtc_clear_counters.sh  dtc_counters.sh  dtc_dreqs.sh  dtc_globals.hh  dtc_gui.C  dtc_gui.C.save  dtc_init.C  dtc_print_firefly_temp.C  dtc_print_firefly_temp.sh  dtc_print_link_counters.C  dtc_print_register.C  dtc_print_roc_status.C  dtc_print_status.C  dtc_read_register.C  dtc_reset.sh  dtc_reset_roc.C  dtc_roc_reset.C  dtc_set_roc_pattern_mode.C  dtc_softreset.sh  dtc_status.sh  (+38 more)
scripts/attic/: chantsDataTestVst.sh
test/: TrackerVST001_test_002.fcl  TrackerVST001_test_003.fcl  TrackerVST001_test_004.fcl  TrackerVST_test_001.fcl  driver_tracker_vst.fcl  test_TrackerVST001_001.fcl
ups/: product_deps
